fix popup horizontal overflow for movile and desktop version

--- a/style.css
+++ b/style.css
@@ -331,8 +331,8 @@ body {
   box-sizing: border-box;
   padding-top: 18px;
   padding-bottom: 10%;
-  padding-left: 9.8%;
-  padding-right: 9.8%;
+  padding-left: 5%;
+  padding-right: 5%;
   background-color: rgba(193, 199, 208, 0.6);
   backdrop-filter: blur(8px);
 }
@@ -829,9 +829,10 @@ media queries Below
   /*
   Desktop PopUP start----------------
   */
-  .portfolio-pupUp-background {
-    padding-left: 10%;
-    padding-right: 10%;
+  .portfolio-pupUp-backgroundOpen {
+    padding-top: 4%;
+    padding-left: 9.8%;
+    padding-right: 9.8%;
     box-sizing: border-box;
   }
 
